# flexible-logger

./: .gitignore  AI-Init.md  AI-Project-DNA.md  AI-Session-State.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TESTING.md  TODO.md  docker-compose.yml  go.mod  go.sum  testing.md  todo
.github/workflows/: ci-cd.yml  deploy.yml  python-wheels.yml  release.yml
_archive/: ARCHITECTURE.md  TESTING.md
cmd/flexible-logger/: main.go  standalone.yaml
cmd/main/: main.go
cmd/see-console-output/: example_text_output.go
cmd/test/: config_test.yaml  main.go
cmd/test-log-server/: connection_test.go  main.go
config/: default.yaml
python/: pyproject.toml
python/capi/: main.go
python/flexible_logger/: __init__.py  flexible_logger.py  libflexible_logger.h
python/tests/: test_levels.py  test_logger.py
quick-overview/: Architecture-Overview.md  Features-Behavior.md  General-Misc.md  Testing-Playbook.md
scratch/: verify_premium_features.go
src/engine/: fallback_logger.go  log_engine.go  log_engine_test.go
src/error_handler/: error_handler_test.go  fallback_logger.go
src/factory/: factory_test.go  logger_factory.go
src/helpers/: constants.go  paths.go  paths_test.go
src/interfaces/: logger.go  notifier.go  serializer.go  sink.go
src/models/: entry.go  entry_test.go  level.go  level_test.go  notif_message.go  notification.go  pool.go
src/network_manager/: managed_connection.go  network_manager.go  network_manager_test.go
src/notifier/: local_notifier.go  notifier_test.go  remote_notifier.go
src/profiles/: audit.go  (+8 more)
tests/: integration_test.go
(+15 files in other folders)
