[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexible-logger"
version = "0.1.0"
description = "Python bindings for the Flexible Logger Go library"
readme = "README.md"
authors = [
    { name = "Bastien Antigravity" }
]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["flexible_logger*"]

[tool.setuptools.package-data]
flexible_logger = ["*.so", "*.dylib", "*.dll"]
